[package]
name = "knockknock"
version = "0.1.0"
authors = ["Eugene Wolffe <fluffy1781@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
bytes = "1"
integer-encoding = "3.0.1"
tokio = { version = "1.3.0", features = ["full"]}
tokio-util = { version = "0.6.4", features = ["full"] }